<resources>
    <string name="app_name">GB Scorekort</string>
    <string name="type_username">Indtast brugernavn, e.g.: 133"en dash"1860</string>
    <string name="type_password">Password: *****</string>
    <string name="main_menu_header">Velkommen til GolfBox</string>
    <string name="login_header">Indtast dine oplysninger</string>
    <string name="btn_login_text">Login</string>
    <string name="member_info_header">Dine oplysninger</string>

    <string name="text_scorecard_hole">Hul</string>
    <string name="text_scorecard_par">Par</string>
    <string name="scorecard_header">Scorekort</string>
    <string name="member_name_header">Navn:</string>
    <string name="member_address_header">Adresse:</string>
    <string name="member_handicap_header">Handicap:</string>
    <string name="member_clubs_header">Klub(ber):</string>
    <string name="search_courses">Find bane</string>
    <string name="wizard_header">Søg på baner</string>
    <string name="type_course_name">Søg på en bane</string>
    <string name="marker_player_chooser_text">Markør</string>
    <string name="length_chooser_text">Spil fra</string>
    <string name="name_text">Navn</string>
    <string name="btn_finish_wizard_text">Start</string>
    <string name="btn_save_hole_text">Gem</string>
    <string name="hole_details_stroke_text">Slag</string>
    <string name="hole_details_points_text">Point</string>
    <string name="front_nine_table_text">Ud</string>
    <string name="back_nine_table_text">Ind</string>
    <string name="score_totals_table_text">Total</string>
    <string name="score_table_save_score_text">Gem Scorekort</string>
    <string name="generic_btn_undo_text">Fortryd</string>
    <string name="generic_btn_save_text">Gem</string>
    <!--<string name="server_url">golfserver.192.168.1.40.xip.io:8888</string>-->
    <string name="server_url">fd133f35.ngrok.io</string>
    <string name="player_search_hint">Søg spiller på navn eller id</string>
    <string name="player_search">Find spiller</string>
    <string name="meters_text_string">m</string>
    <string name="distance_measurer_header">Afstandsmåler</string>
    <string name="button_reset_text_string">Reset</string>
    <string name="button_forward_map_text"><![CDATA[>]]></string>
    <string name="button_back_map_text"><![CDATA[<]]></string>
    <string name="distance_measurer_text">Afstandsmåler</string>
</resources>
