<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:id="@+id/player_choser_content"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <TextView android:layout_width="wrap_content"
                  android:id="@+id/course_player_chooser_fragment"
                  android:layout_height="wrap_content"/>

        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">

            <TextView android:layout_width="wrap_content"
                      android:text="@string/name_text"
                      android:textSize="@dimen/course_content_text_size"
                      android:id="@+id/player_player_chooser_fragment"
                      android:layout_height="wrap_content"/>

            <TextView android:layout_width="wrap_content"
                      android:id="@+id/length_player_chooser_fragment"
                      android:text="@string/length_chooser_text"
                      android:textSize="15sp"
                      android:layout_height="wrap_content"
                      android:layout_alignParentTop="true"
                      android:layout_marginRight="20dp"
                      android:layout_marginEnd="20dp"
                      android:layout_toLeftOf="@+id/marker_player_chooser_fragment"
                      android:layout_toStartOf="@+id/marker_player_chooser_fragment"/>

            <TextView android:layout_width="wrap_content"
                      android:id="@+id/marker_player_chooser_fragment"
                      android:text="@string/marker_player_chooser_text"
                      android:layout_height="wrap_content"
                      android:textSize="15sp"
                      android:layout_alignParentTop="true" android:layout_alignParentRight="true"
                      android:layout_alignParentEnd="true"/>
        </RelativeLayout>


        <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/players_chosen_list">

        </ListView>

    </LinearLayout>

    <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_finish_scorecard_wizard"
            android:layout_below="@+id/player_choser_content"
            android:layout_marginTop="100dp"
            card_view:cardBackgroundColor="@color/colorBg"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="@dimen/btn_corner_radius">

        <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:padding="10dp"
                android:orientation="vertical"
                android:background="@color/colorBg">

            <ImageView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/finish"
                    android:id="@+id/hole_details_image_view"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"/>


            <TextView android:layout_width="300dp"
                      android:layout_height="wrap_content"
                      android:textSize="30sp"
                      android:gravity="start"
                      android:textColor="#FFF"
                      android:text="@string/btn_finish_wizard_text"
                      android:layout_toRightOf="@id/hole_details_image_view"
                      android:layout_toEndOf="@id/hole_details_image_view"
                      android:layout_alignParentEnd="true"
                      android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>
