<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_member_info"
        tools:context="com.github.xb10.xb10_scorecard.MemberInfoActivity"
        android:background="@drawable/background">

    <LinearLayout android:orientation="horizontal"
                  android:layout_height="wrap_content"
                  android:layout_width="match_parent">
        <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/member_name_header"
                android:id="@+id/name_view_header"
                android:textSize="@dimen/course_list_text_size"
                android:gravity="start"/>

        <TextView
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/name_view"
                android:textSize="@dimen/course_list_text_size"
                android:gravity="start"
                android:textColor="@color/textColor"/>
    </LinearLayout>


    <LinearLayout android:orientation="horizontal"
                  android:layout_height="wrap_content"
                  android:layout_width="match_parent">
        <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/member_address_header"
                android:id="@+id/address_view_header"
                android:textSize="@dimen/course_list_text_size"
                android:gravity="start"/>

        <TextView
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/address_view"
                android:textSize="@dimen/course_list_text_size"
                android:gravity="start"
                android:textColor="@color/textColor"/>
    </LinearLayout>


    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
        <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/member_handicap_header"
                android:id="@+id/handicap_view_header"
                android:textSize="@dimen/course_list_text_size"
                android:gravity="start"/>

        <TextView
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/handicap_view"
                android:textSize="@dimen/course_list_text_size"
                android:gravity="start"
                android:textColor="@color/textColor"/>
    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/member_clubs_header"
                android:id="@+id/clubs_view_header"
                android:textSize="@dimen/course_list_text_size"
                android:gravity="start"/>

        <ListView
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/clubs_view"
                android:textSize="@dimen/course_list_text_size"
                android:gravity="start"
                android:textColor="@color/textColor"/>
    </LinearLayout>


</LinearLayout>
