<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
              tools:showIn="@layout/activity_login"
              tools:context="com.github.xb10.scorecard.LoginActivity"
              android:background="@drawable/background">


    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/login_header"
              android:textSize="30sp"
              android:textColor="@color/textColor"
              android:gravity="center_horizontal"/>

    <RelativeLayout android:layout_height="wrap_content" android:layout_width="match_parent">

        <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"/>

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/activity_vertical_margin"
                  android:hint="@string/type_username"
                  android:textSize="20sp"
                  android:textColor="#FFF"
                  android:id="@+id/id_login_view"
                  android:textColorHint="@android:color/darker_gray"


                  android:text="133-754"/>

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/activity_vertical_margin"
                  android:inputType="textPassword"
                  android:textSize="20sp"
                  android:id="@+id/password_login_view"
                  android:hint="@string/type_password"
                  android:textColor="#FFF"
                  android:layout_below="@+id/id_login_view"
                  android:textColorHint="@android:color/darker_gray"


                  android:text="1234"/>
    </RelativeLayout>


    <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/card_view_login"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            card_view:cardBackgroundColor="@color/colorBg"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="@dimen/btn_corner_radius">

        <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_height"
                android:padding="10dp"
                android:orientation="vertical"
                android:background="@color/colorBg">

            <ImageView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/gb_lock"
                    android:id="@+id/hole_details_image_view"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"/>


            <TextView android:layout_width="300dp"
                      android:layout_height="wrap_content"
                      android:textSize="30sp"
                      android:gravity="start"
                      android:textColor="#FFF"
                      android:text="@string/btn_login_text"
                      android:layout_toRightOf="@id/hole_details_image_view"
                      android:layout_toEndOf="@id/hole_details_image_view"
                      android:layout_alignParentEnd="true"
                      android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView" android:layout_gravity="bottom|end"
            android:adjustViewBounds="false"
            android:src="@drawable/gb_nav_bg_golfer"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>


</LinearLayout>

